# ymir

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  HANDOFF.md  README.md  docs-site-plan.md  gitignore  mkdocs.yml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
crates/xtask/: Cargo.toml
crates/xtask/src/: docs.rs  fragment.rs  lint.rs  main.rs  render.rs
crates/ymir-build-info/: Cargo.toml  build.rs
crates/ymir-build-info/src/: lib.rs
crates/ymir-cli/: Cargo.toml
crates/ymir-cli/src/: docs.rs  main.rs
crates/ymir-core/: Cargo.toml
crates/ymir-core/src/: cancel.rs  compute.rs  context.rs  error.rs  eval.rs  export.rs  field.rs  field_cache.rs  field_store.rs  graph.rs  hash.rs  import.rs  layer.rs  layers.rs  lib.rs  logging.rs  missing.rs  noise.rs  operator.rs  paint.rs  param.rs  project.rs  region.rs  registry.rs  spec.rs  subgraph.rs
crates/ymir-core/tests/: field_properties.rs
crates/ymir-gpu/: Cargo.toml
crates/ymir-gpu/src/: lib.rs  scalar_multiply.wgsl
crates/ymir-gui/: Cargo.toml  DESIGN.md
crates/ymir-gui/assets/fonts/: README.md
crates/ymir-gui/src/: build.rs  canvas.rs  curve_edit.rs  dock.rs  history.rs  library.rs  main.rs  param_ui.rs  pick.rs  preferences.rs  preview.rs  project_file.rs  shade.rs  spike.rs  starter.rs  sun.rs  theme.rs  thumbnails.rs  viewport.rs  viewport2d.rs  viewport2d_gpu.rs
crates/ymir-nodes/: Cargo.toml
crates/ymir-nodes/docs/: README.md  endpoint.export.md  endpoint.export_exr.md  endpoint.export_r16.md  generator.billow.md  generator.cellular_bumps.md  generator.cellular_cracks.md  generator.cellular_regions.md  generator.constant.md  generator.falloff.md  generator.fbm.md  generator.flow.md  generator.gradient.md  generator.hybrid.md  generator.import.md  generator.paint.md  generator.polygon.md  generator.radial.md  generator.rect.md  generator.ridged.md  generator.ring.md  modifier.aspect.md  modifier.blend.md  modifier.blur.md  modifier.clamp.md  modifier.coastal.md  modifier.curvature.md  modifier.curve.md  modifier.directional_blur.md  modifier.distance.md  modifier.expression.md  modifier.frequency_split.md  modifier.height.md  modifier.histogram_scan.md  modifier.hydraulic_erosion.md  modifier.invert.md  modifier.levels.md  modifier.normalize.md  modifier.null.md  modifier.occlusion.md  (+9 more)
crates/ymir-nodes/src/: aspect.rs  billow.rs  blend.rs  blur.rs  category.rs  cellular_bumps.rs  cellular_cracks.rs  cellular_regions.rs  clamp.rs  coastal.rs  combine.rs  constant.rs  curvature.rs  curve.rs  directional_blur.rs  distance.rs  erosion.rs  export.rs  export_exr.rs  export_r16.rs  expr.rs  expression.rs  falloff.rs  fbm.rs  flow.rs  flow_droplet.rs  flow_harmonic.rs  flow_select.rs  flow_water.rs  frequency_split.rs  gradient.rs  height.rs  histogram_scan.rs  hybrid.rs  hydraulic.rs  hydrology.rs  import.rs  invert.rs  levels.rs  lib.rs  (+23 more)
crates/ymir-nodes/tests/: context_deps_guard.rs  graph_golden.rs  project_roundtrip.rs  registry_smoke.rs
design/: biomes-and-hexmaps.md  coastal-erosion.md  control-fields-and-directability.md  erosion-roadmap.md  evaluation-cache.md  expression-cookbook.md  gpu-erosion.md  mask-and-selection-model.md  node-categories.md  node-inventory.md  node-taxonomy.md  noise-generators.md  project-format.md  scatter.md  shape-generators.md  subgraphs.md  transform-and-placement.md  versioning.md  viewport-water.md  ymir-erosion-DESIGN.md
design_handoff_viewport_controls/: README.md  Ymir Viewport Controls.dc.html
design_handoff_world_settings/: README.md  Ymir World Settings 1c.dc.html  Ymir World Settings.dc.html
docs/: expression-cookbook.md  index.md  install.md  roadmap.md  ymir-erosion-DESIGN.md
docs/concepts/: erosion.md  fields-and-layers.md  index.md  landforms.md  macro-form.md  masks-and-selections.md  preview-and-build.md
docs/design/: control-fields-and-directability.md  erosion-roadmap.md  gpu-erosion.md  mask-and-selection-model.md  node-categories.md  node-inventory.md  node-taxonomy.md  noise-generators.md  project-format.md  shape-generators.md  transform-and-placement.md  versioning.md  viewport-water.md
docs/how-to/: index.md
docs/reference/: cli.md  export-formats.md  index.md  project-format.md  shortcuts.md  world-settings.md
docs/reference/nodes/: endpoint.export.md  endpoint.export_exr.md  endpoint.export_r16.md  generator.billow.md  generator.cellular_bumps.md  generator.cellular_cracks.md  generator.cellular_regions.md  generator.constant.md  generator.falloff.md  generator.fbm.md  generator.flow.md  generator.gradient.md  generator.hybrid.md  generator.import.md  generator.paint.md  generator.polygon.md  generator.radial.md  generator.rect.md  generator.ridged.md  generator.ring.md  index.md  modifier.aspect.md  modifier.blend.md  modifier.blur.md  modifier.clamp.md  modifier.coastal.md  modifier.curvature.md  modifier.curve.md  modifier.directional_blur.md  modifier.distance.md  modifier.expression.md  modifier.frequency_split.md  modifier.height.md  modifier.histogram_scan.md  modifier.hydraulic_erosion.md  modifier.invert.md  modifier.levels.md  modifier.normalize.md  modifier.null.md  modifier.occlusion.md  (+9 more)
docs/tutorial/: index.md
packaging/: install-local.sh  ymir.desktop
patches/: README.md  egui-snarl-click-to-wire.patch  egui-snarl-drop-on-wire.patch  egui-snarl-middle-pan.patch  egui-snarl-output-pin-space.patch  egui-snarl-wire-to-create.patch
scripts/: check-shortcuts.sh  gh-setup-structure.sh
talk/: agile-thailand-field-briefing.html
