[workspace]
resolver = "3"
members = ["crates/*"]
# No `default-members`, so bare `cargo test`/`build`/`clippy` cover the whole
# workspace. With two binaries now (ymir-cli, ymir-gui) bare `cargo run` is
# ambiguous: use `cargo run -p ymir-cli` or `cargo run -p ymir-gui`.

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
authors = ["Oluf Andrews <oluf@oandrews.com>"]
rust-version = "1.95"

# egui stack pinned centrally: egui-snarl, egui-phosphor, and any future
# egui_tiles/egui_dock must share one egui major, so the GUI crates inherit this
# version and bump in lockstep. Wgpu backend (the 3D viewport needs it), no glow.
[workspace.dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }

# Lint policy lives here so every crate inherits it with `[lints] workspace = true`.
# The `cargo clippy --all-targets -- -D warnings` gate then turns these into hard
# errors, which is how `missing_docs` and the no-unsafe rule are enforced.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

# egui-snarl is vendored with a one-line change (pan on middle-mouse, freeing left-drag
# for the canvas marquee, #84). The change and the re-apply-on-upgrade workflow are in
# patches/. The version in vendor/egui-snarl/Cargo.toml must match the pinned `=0.10.0`.
[patch.crates-io]
egui-snarl = { path = "vendor/egui-snarl" }
