[package]
name = "ymir-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Headless command-line runner for Ymir."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# The logging facade, so a headless run records load degradations to stderr. The backend
# is installed in `main` via `ymir_core::logging`.
log = "0.4"
# Depended on for its operator registrations. The binary must also anchor it in
# code (`use ymir_nodes as _;`), or the linker can drop the registrations.
ymir-nodes = { path = "../ymir-nodes" }
