[package]
name = "ymir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Headless command-line runner for Ymir."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# Compile-time version and git provenance, for `--version`.
ymir-build-info = { path = "../ymir-build-info" }
# The logging facade, so a headless run records load degradations to stderr. The backend
# is installed in `main` via `ymir_core::logging`.
log = "0.4"
# Depended on for its operator registrations. The binary must also anchor it in
# code (`use ymir_nodes as _;`), or the linker can drop the registrations.
ymir-nodes = { path = "../ymir-nodes" }
# Serializes the registered node specs to JSON for the docs generator (the `docs` subcommand).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
