[package]
name = "ymir-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Headless engine for Ymir: the Field data model, operators, registry, and evaluator."

[lints]
workspace = true

[dependencies]
# 16-bit PNG requires DEFLATE plus per-chunk CRCs; a vetted encoder is justified
# over hand-rolling those. `png` is the de facto standard and pulls a small tree
# (deflate + crc only), unlike the heavier `image` crate. PNG encoding is
# non-terrain-semantic format I/O, so it stays in core.
png = "0.17"
# 32-bit float EXR export (absolute-meters heightmaps, #24): the OpenEXR format is
# intricate (channels, compression, tiling) and not worth hand-rolling. `exr` (exrs)
# is 100% safe Rust with no C/OpenEXR build dependency, matching the no-unsafe,
# portable stance. Non-terrain-semantic format I/O, so it stays in core.
exr = "1"
# Derive macro for the single crate error type, the documented error strategy.
thiserror = "2"
# Distributed registration: nodes in `ymir-nodes` submit operator entries that
# this crate collects, with no central enum. The link-time gotcha is guarded by
# `use ymir_nodes as _;` in the binary plus a node-count smoke test.
inventory = "0.3"
# Generational keys for the node graph: a deleted node's NodeId cannot alias a
# later one, which the future editor needs. Chosen over a Vec+index, which has a
# dangling-reference bug under deletion.
slotmap = "1"
# Project files serialize as JSON: human-readable and git-diffable (a stated goal),
# the de-facto standard, and far less error-prone than a hand-rolled encoder. Only
# instance data (params and the graph document) derives serde; node schema is
# rebuilt from the registry, never serialized. serde_json's float formatting is
# round-trip-exact, so a saved project reloads to byte-identical output.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Data parallelism for the per-cell generator fills (`Layer::from_par_fn`). Each cell is
# an independent pure function, so a parallel fill writing each slot by index is
# byte-identical to the sequential one regardless of thread count, preserving the
# determinism promise. The de-facto standard for CPU data parallelism in Rust.
rayon = "1"
# The standard logging facade, so any crate can emit diagnostics (project-load
# degradations, evaluation issues) that a headless/CLI run records to stderr or a
# logfile without a GUI to show them. The backend is a tiny in-tree tee logger; only
# the facade is a dependency, keeping call sites decoupled from where logs go.
log = { version = "0.4", features = ["std"] }
# RFC3339 timestamp formatting for the logfile, so a toolchain run can order events.
# Tiny and dependency-free; the std library has no date formatting.
humantime = "2"

[dev-dependencies]
# Property-based tests for the Field invariants (see tests/field_properties.rs).
proptest = { workspace = true }
