[package]
name = "ymir-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ymir's node editor and viewport (egui + wgpu)."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# Depended on so its operator and category registrations populate the palette,
# and for the tr(key) resolver and CategoryDef. Using its items directly links
# the crate (and its inventory registrations), so no separate anchor is needed.
ymir-nodes = { path = "../ymir-nodes" }
# eframe is the egui application framework (window, event loop, wgpu backend).
# Version is pinned centrally in the workspace so the egui stack stays in lockstep.
eframe.workspace = true
# Pane kinds self-register by id, the same distributed-registration pattern the
# engine uses for operators and categories.
inventory = "0.3"
