[package]
name = "ymir-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ymir's node editor and viewport (egui + wgpu)."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# Depended on so its operator and category registrations populate the palette,
# and for the tr(key) resolver and CategoryDef. Using its items directly links
# the crate (and its inventory registrations), so no separate anchor is needed.
ymir-nodes = { path = "../ymir-nodes" }
# eframe is the egui application framework (window, event loop, wgpu backend).
# Version is pinned centrally in the workspace so the egui stack stays in lockstep.
eframe.workspace = true
# Pane kinds self-register by id, the same distributed-registration pattern the
# engine uses for operators and categories.
inventory = "0.3"
# The node editor. egui-snarl is low-adoption and churny (nine breaking changes
# across fifteen releases), so it is pinned exactly rather than by caret and tracked
# actively; upgrades are a deliberate, egui-lockstep step. 0.10.0 resolves against
# the workspace's egui 0.34 with no duplicate egui in the tree.
egui-snarl = "=0.10.0"
# Decodes the embedded window-icon PNG into RGBA for eframe. Already in the tree via
# ymir-core, so this reuses it rather than pulling eframe's heavier `image`-based
# icon helper.
png = "0.17"
# The GUI project file wraps ymir-core's graph document with canvas view-state (node
# positions) and world settings in one git-friendly JSON file. serde/serde_json are
# already in the tree via ymir-core; declared here for the envelope types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native Save/Open dialogs, each platform's own: Win32 on Windows, Cocoa on macOS,
# and the XDG desktop portal on Linux (the default backend), which yields the real
# KDE/GNOME picker instead of an in-process GTK dialog that rendered poorly on KDE.
# The portal path is Linux-only (ashpd/async-std/pollster are gated to Linux/BSD and
# never compile on Windows/macOS); we use rfd's blocking sync API, so no async reaches
# our code (the project is no-async by policy).
rfd = "0.15"
