[package]
name = "ymir-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Concrete operators (the nodes) for Ymir, plus their terrain math."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# Each operator registers itself with `inventory::submit!`; `ymir-core` collects
# the entries. The binary must anchor this crate so the registrations link.
inventory = "0.3"
