[package]
name = "ymir-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Concrete operators (the nodes) for Ymir, plus their terrain math."

[lints]
workspace = true

[dependencies]
ymir-core = { path = "../ymir-core" }
# Each operator registers itself with `inventory::submit!`; `ymir-core` collects
# the entries. The binary must anchor this crate so the registrations link.
inventory = "0.3"
# Data parallelism for thermal erosion's multi-buffer passes (the per-cell generator
# fills use `Layer::from_par_fn` in ymir-core instead). The pass is a two-phase gather:
# each cell computes its own outputs from neighbour reads, so the parallel result is
# byte-identical regardless of thread count.
rayon = "1"
